WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313135
REGRESSION (Safari 26): Select picker incorrect position
https://bugs.webkit.org/show_bug.cgi?id=313135
Summary
REGRESSION (Safari 26): Select picker incorrect position
Luke Warlow
Reported
2026-04-23 08:14:37 PDT
Minimal repo:
https://codepen.io/lukewarlow/pen/raMEmVN
original demo:
https://codepen.io/editor/WickyNilliams/pen/019dba7a-6160-76db-95df-6ba3cfcd17b8
In Safari 26.4, when you open the selects in the above examples the picker will be misaligned, in the minimal repro case it'll be in the bottom right corner, and in the larger demo it'll be shifted diagonally. Importantly this seems to be related to the select being inside a shadowroot, I can't reproduce without it.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2026-04-23 13:58:30 PDT
Thank you for the report! I can reproduce with Safari 26 on macOS 26, but not with Safari 18.6 on macOS Sequoia 15.6.1.
Radar WebKit Bug Importer
Comment 2
2026-04-23 13:58:36 PDT
<
rdar://problem/175454476
>
Kiet Ho
Comment 3
2026-04-29 19:14:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63942
EWS
Comment 4
2026-05-07 10:58:33 PDT
Committed
312811@main
(7d2bb1ed4f24): <
https://commits.webkit.org/312811@main
> Reviewed commits have been landed. Closing PR #63942 and removing active labels.
Jeff Johnson
Comment 5
2026-05-08 04:33:17 PDT
Question: Is this the same bug?
https://bugs.webkit.org/show_bug.cgi?id=313466
Kiet Ho
Comment 6
2026-05-08 10:35:28 PDT
Hi Jeff, thank you for filing that bug. I checked and I think they're different bugs. This bug manifests if the <select> is positioned using CSS anchor positioning.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug